<resources>
    <string name="app_name">CW1_App</string>
    <string name="_39_we_don_39_t_read_and_write_poetry_because_it_39_s_cute_we_read_and_write_poetry_because_we_are_members_of_the_human_race_and_the_human_race_is_filled_with_passion_and_medicine_law_business_engineering_these_are_noble_pursuits_and_necessary_to_sustain_life_but_poetry_beauty_romance_love_these_are_what_we_stay_alive_for_n_nto_quote_from_whitman_o_me_o_life_of_the_questions_of_these_recurring_of_the_endless_trains_of_the_faithless_of_cities_filled_with_the_foolish_what_good_amid_these_o_me_o_life_n_nanswer_that_you_are_here_that_life_exists_and_identity_that_the_powerful_play_goes_on_and_you_may_contribute_a_verse_that_the_powerful_play_goes_on_and_you_may_contribute_a_verse_what_will_your_verse_be_39">\'We don\'t read and write poetry because it\'s cute. We read and write poetry because we are members of the human race. And the human race is filled with passion. And medicine, law, business, engineering, these are noble pursuits and necessary to sustain life. But poetry, beauty, romance, love, these are what we stay alive for. \n\nTo quote from Whitman, O me! O life!... of the questions of these recurring; of the endless trains of the faithless... of cities filled with the foolish; what good amid these, O me, O life? \n\nAnswer. That you are here - that life exists, and identity; that the powerful play goes on and you may contribute a verse. That the powerful play *goes on* and you may contribute a verse. What will your verse be?\'</string>
    <string name="my_favourite_quote">My Favourite Quote:</string>
    <string name="section_202443_13031">Section: 202443.13031</string>
    <string name="class_mobile_development">Class: Mobile Development</string>
    <string name="name_ramiyan_gangatharan">Name: Ramiyan Gangatharan</string>
</resources>