<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Name TextView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_ramiyan_gangatharan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Class TextView -->
    <TextView
        android:id="@+id/classTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/class_mobile_development"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />

    <!-- Section TextView -->
    <TextView
        android:id="@+id/sectionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/section_202443_13031"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classTextView" />

    <!-- My Favourite Quote Label -->
    <TextView
        android:id="@+id/quoteLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_favourite_quote"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sectionTextView" />

    <!-- Quote Content -->
    <TextView
        android:id="@+id/quoteTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_39_we_don_39_t_read_and_write_poetry_because_it_39_s_cute_we_read_and_write_poetry_because_we_are_members_of_the_human_race_and_the_human_race_is_filled_with_passion_and_medicine_law_business_engineering_these_are_noble_pursuits_and_necessary_to_sustain_life_but_poetry_beauty_romance_love_these_are_what_we_stay_alive_for_n_nto_quote_from_whitman_o_me_o_life_of_the_questions_of_these_recurring_of_the_endless_trains_of_the_faithless_of_cities_filled_with_the_foolish_what_good_amid_these_o_me_o_life_n_nanswer_that_you_are_here_that_life_exists_and_identity_that_the_powerful_play_goes_on_and_you_may_contribute_a_verse_that_the_powerful_play_goes_on_and_you_may_contribute_a_verse_what_will_your_verse_be_39"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quoteLabelTextView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>